# my-site

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  dev_setup.sh  manage.py  pyproject.toml  railway.json  requirements.txt
.devcontainer/: Dockerfile  bash_aliases.sh  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-sync.yml
blog/: admin.py  apps.py  urls.py
blog/migrations/: 0001_initial.py  0002_initial.py
blog/models/: post.py
blog/templatetags/: markdown_extras.py
blog/tests/: test_blog.py
blog/views/: __init__.py  post_detail.py  post_list.py
config/: settings.py  urls.py
config/tests/: factories.py  test_frontend.py
mysite/: apps.py  urls.py
mysite/data/: README.md
mysite/management/commands/: populate_dev_data.py
mysite/tests/: test_errors.py
mysite/views/: errors.py
projname/: apps.py
projname/tests/: test_errors.py
projname/views/: __init__.py  errors.py  splash.py
static/css/: site.css
static/js/: theme.js
templates/: base.html  splash.html
templates/blog/: post_detail.html  post_list.html
templates/errors/: 400.html  403.html  404.html  500.html  503.html
templates/includes/: navbar.html
templates/registration/: login.html  signup.html
templates/users/: user_detail.html  user_edit.html
users/: admin.py  apps.py  urls.py
users/forms/: __init__.py  user_change.py  user_create.py
users/migrations/: 0001_initial.py
users/models/: custom_user.py
users/signals/: __init__.py  log_user_creation.py
users/tests/: test_profiles.py  test_users.py
users/views/: __init__.py  profiles.py  signup.py
