[project]
name = "projname"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "crispy-bootstrap5>=2026.3",
    "dj-database-url>=3.1.0",
    "django>=6.0.4",
    "django-crispy-forms>=2.6",
    "markdown>=3.10.1",
    "nh3>=0.3.4",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "diff-cover>=10.2.0",
    "django-coverage-plugin>=3.2.2",
    "django-stubs[compatible-mypy]>=6.0.3",
    "mypy>=1.20.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.11.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.11",
    "types-markdown>=3.10.2.20260408",
]
prod = [
    "gunicorn>=25.3.0",
    "psycopg[binary]>=3.3.4",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "**/migrations/*.py", # Ignore Django migrations
]
target-version = "py314"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors: Standard PEP 8 style violations (e.g., formatting issues)
    "W",    # pycodestyle warnings: Less severe PEP 8 warnings
    "F",    # Pyflakes: logical errors (e.g., unused imports, undefined variables)
    "DJ",   # flake8-django: Django-specific best practices and idiomatic code checks
    "I",    # isort: Sorts and groups imports automatically
    "UP",   # pyupgrade: Upgrades outdated syntax (e.g., rewriting type hints or super() calls)
    "B",    # flake8-bugbear: Finds likely bugs and design problems
    "SIM",  # flake8-simplify: Suggests ways to rewrite code so it's simpler/more readable
    "C4",   # flake8-comprehensions: Encourages better list/set/dict comprehensions
    "COM",  # flake8-commas: Checks for trailing commas (often used with Black/Ruff formatter)
    "LOG",  # flake8-logging: Validates logging setup and usage patterns
    "G",    # flake8-logging-format: Validates logging string formatting (e.g., avoid f-strings in logs)
    "Q",    # flake8-quotes: Enforces consistent string quoting (single vs double)
    "RET",  # flake8-return: Checks for unnecessary return statements (e.g., unnecessary else after return)
    "PTH",  # flake8-use-pathlib: Enforces using pathlib over os.path
    "N",    # pep8-naming: Enforces standard PEP 8 naming conventions (e.g., class names, function names)
]

ignore = [
    "E501", # Ignore line length violations (let the formatter handle splitting lines automatically)
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pep8-naming]
ignore-names = ["User", "setUp", "setUpTestData"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.djlint]
profile = "django"
blank_line_after_tag = "load,extends,include"
close_void_tags = true
format_css = true
format_js = true

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.pytest.ini_options]
addopts = "--ds=config.settings --reuse-db --cov --cov-report=html --cov-report=xml"
python_files = [
    "test_*.py",
]

[tool.coverage.run]
core = "ctrace"
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
    "env/*",
    "venv/*",
    ".venv/*",
    "requirements.txt",
    "*/config/settings.py",
]
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 10
exclude_lines = [
    "pragma: no cover",
    "except Exception",
    "if not self.request.user.is_authenticated:",
    "if not user.is_authenticated:",
    "if not request.user.is_authenticated:",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise TypeError",
    "raise CommandError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.django_coverage_plugin]
template_extensions = "html"

[tool.diff-cover]
coverage-xml = "coverage.xml"
compare-branch = "origin/main"  # Or your default branch
fail-under = 0
ignore-files = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
    "env/*",
    "venv/*",
    ".venv/*",
    "requirements.txt",
]

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
]
disable_error_code = ["unused-ignore","type-arg"]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"
